# 3.02.05 (72207) Feb 19, 2013
2/19/13 Deploying version with alternative layout for touch screen testing.
# 3.02.04 (72204) Feb 19, 2013
Added an alternative canvas layout where widgets are positioned on the left, rather than the right.  This layout is used in this version.
# 3.02.03 (72195) Feb 19, 2013
Turned off confirmation for Reset All button on first tab.
# 3.02.02 (72193) Feb 19, 2013
2/19/13 Publishing to dev for touch-based testing.
Made it possible to extract the particles from the buckets by touching the buckets themselves. This is prototyping for touch-based interface testing.
# 3.02.01 (72138) Feb 13, 2013
2/13/13 Publishing to dev for use in touch-based interviews.
Enlarged all particles so that they are easier to grab when using in touch mode.  This was a special request for some upcoming interviews.
9/6/12 #3434, change default behavior of "New Game" to no confirmation
# 3.02.00 (67107) Aug 18, 2012
> Removed strings, including translated versions, for calcium and potassium.  These were unused, and removed to avoid potential confusion.
# 3.01.01 (67068) Aug 16, 2012
> 8/16/12 Fixed an issue where the label "calcium" was being used where it should have said "chlorine".
# 3.01.00 (66654) Aug 7, 2012
# 3.00.02 (66635) Aug 7, 2012
> Fixed a problem that prevented audio from playing under Java 7
# 3.00.01 (53883) Jul 8, 2011
7/8/11 Deploying to dev for testing of several recent changes.
Refactored to accommodate changes to piccolo-phet PeriodicTableNode, see #2994
Reformatted according to IntelliJ PhetStyle, see #2994
> isotopes-and-atomic-mass: Integrated a fix that makes the slider knobs wider on the 2nd tab when using the "More" setting.
> isotopes-and-atomic-mass: Fixed an issue where atoms could get stuck outside of the test chamber in some circumstances.
> isotopes-and-atomic-mass: Added ability to set background of test chamber to be white.
# 3.00.00 (51913) May 13, 2011
5/13/11 >Initial publication of the Isotopes and Atomic Mass simulation.