@@ -20,8 +20,7 @@ public class BuildAnAtomModule extends PiccoloModule {
     //----------------------------------------------------------------------------
 
     private final BuildAnAtomModel model;
-//    private final BuildAnAtomCanvas canvas;
-    private final BuildAnAtomCanvasAlternate canvas;
+    private final BuildAnAtomCanvas canvas;
 
     //----------------------------------------------------------------------------
     // Constructors
@@ -36,8 +35,7 @@ public class BuildAnAtomModule extends PiccoloModule {
         model = new BuildAnAtomModel( clock );
 
         // Canvas
-//        canvas = new BuildAnAtomCanvas( model );
-        canvas = new BuildAnAtomCanvasAlternate( model );
+        canvas = new BuildAnAtomCanvas( model );
         setSimulationPanel( canvas );
 
         // Help
