@@ -1,3 +1,4 @@
+Added "Reset Atom" button to primary canvas, reverted back to using primary canvas (original layout).
 # 3.02.05 (72207) Feb 19, 2013
 2/19/13 Deploying version with alternative layout for touch screen testing.
 # 3.02.04 (72204) Feb 19, 2013
